--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -2,14 +2,14 @@
     --primary-color: #F5F5F5;
     --secondary-color: #3C3C3C;
     --tertiary-color: #087E8B;
+    --quaternary-color: #FF5A5F ;
+    --quinary-color: #FFC759;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
 }
 
 body {
@@ -78,13 +78,13 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: var(--primary-color);
+    background: var(--secondary-color);
     width: 100%;
     padding: 40px 35px;
 }
 
 footer h2 {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -95,7 +95,7 @@ footer div {
 }
 
 footer a {
-    color:var(--secondary-color);
+    color:var(--primary-color);
 } 
 
 section {
@@ -118,4 +118,39 @@ section {
 
 .secondary-border {
     border-color: var(--tertiary-color);
+}
+
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.2;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: var(--primary-color);
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.hero img {
+    width: 250px;
+    border-radius: 50%;
+    border: solid 3px var(--primary-color);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
