--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -120,6 +120,7 @@ section {
     border-color: var(--tertiary-color);
 }
 
+/* hero container: added background photo and set to flex */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
@@ -141,16 +142,42 @@ section {
     line-height: 1.2;
 }
 
+/* size and style hero text */
 .hero-cta h2 {
     font-style: italic;
-    font-size: 55px;
+    font-size: 50px;
     color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
+/* self portait set size, circle border, and border */
 .hero img {
     width: 250px;
     border-radius: 50%;
     border: solid 3px var(--primary-color);
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.intro p {
+    line-height: 1.7;
+    color: var(--tertiary-color);
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.projects {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.projects div {
+    width: 250px;
+    height: 150px;
+    margin: 10px;
+    border: solid 5px var(--quinary-color);
 }
