--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -215,6 +215,7 @@ section {
 
 .projects div img {
     height: 75%;
+    width: 50%;
     margin: auto auto;
 }
 
@@ -267,4 +268,68 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+    
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    .hero-cta {
+        width: 100%;
+    }
+
+    .hero-cta {
+        text-align: center;
+    }
+
+    .section-title {
+        width: 80%;
+    }
+
+    footer h2, footer div {
+        text-align: center;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px 15px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .section-title {
+        width: 95%;
+    }
+
+    .intro p {
+        width: 100%
+    }
+
+    .social-info {
+        text-align: center;
+    }
+
+    .social-info > * {
+        flex: 0 100%;
+    }
 }
